Add extra test case in UT to fix DTx bugs